adding EE api, front end changes for testing, better seeding, and small other things
