# BE/src/modules/earthEngine/earthEngine.route.ts
@@ -1,0 +1,11 @@
+import { Router } from "express";
+import * as controller from "./earthEngine.controller";
+
+const router = Router();
+
+router.get("/thumbnail", controller.getThumbnail);
+router.get("/mapid", controller.getMapId);
+router.get("/tiles", controller.getTileUrl);
+router.get("/tiles/:z/:x/:y", controller.getTile);
+
+export default router;
